refactor(api): implementation of sealed unions (#232)
* fix(db): stop closing shared SessionFactory in flag service

Each of the 9 flag operations wrapped the SessionFactory in
try-with-resources, closing the shared singleton after the first call.
Subsequent flag operations then failed with "SessionFactory is closed".

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(db): return HomePosition model from entityToModel mapper

The entity-to-model direction was constructing a new HomePositionEntity
instead of the HomePosition API model, so callers received an entity
where they expected the DTO.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(db): fail fast when the Hibernate SessionFactory cannot be built

Previously a HibernateException was swallowed, databaseService was left
null, and the plugin continued to enable with null service references,
NPEing on the first command. Throw IllegalStateException instead so the
plugin entry point can log and disable cleanly.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(plugin): disable plugin cleanly when bootstrap throws

Wrap the PandorasClusterImpl construction in onEnable so a failed
Hibernate bootstrap no longer leaves the plugin half-initialized — the
PluginManager disables the plugin and the error is surfaced in the log.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(db): correct chunk-removal return value and parameter binding

- removeClaimedChunk hard-coded return false, so callers never saw a
  successful deletion.
- getClaimedChunk declared a :chunkIndex named parameter but never bound
  it, making the query return an arbitrary row.
- Document unclaimArea as a best-effort composition of already-
  transactional sub-operations so future readers do not assume atomicity.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(db): tighten transaction boundaries in land service

- creat